@@ -9,14 +9,11 @@ typedef void (* ThemeThumbnailFunc) (GdkPixbuf          *pixbuf,
 				     gpointer            data);
 
 
-GdkPixbuf *generate_theme_thumbnail         (GnomeThemeMetaInfo *meta_theme_info,
-					     gboolean            clear_cache);
+GdkPixbuf *generate_theme_thumbnail         (GnomeThemeMetaInfo *meta_theme_info);
 void       generate_theme_thumbnail_async   (GnomeThemeMetaInfo *meta_theme_info,
-					     gboolean            clear_cache,
 					     ThemeThumbnailFunc  func,
 					     gpointer            data,
 					     GDestroyNotify      destroy);
-void       theme_thumbnail_invalidate_cache (GnomeThemeMetaInfo *meta_theme_info);
 void       theme_thumbnail_factory_init     (int                 argc,
 					     char               *argv[]);
 
